fix announcement on Iphone 3258718141

--- a/app/javascript/styles/brighteon-social/diff.scss
+++ b/app/javascript/styles/brighteon-social/diff.scss
@@ -1337,7 +1337,8 @@ body .muted-hint a, .admin-wrapper .content .muted-hint a {
 }
 
 .announcements {
-  min-height: 95px;
+  display: block;
+
   &__container {
     background-color: $black;
     color: $white;
